--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/computapars/weather-app#readme",
   "dependencies": {
     "axios": "^0.19.0",
+    "express": "^4.17.1",
     "yargs": "^14.2.0"
   }
 }
