--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "client-install": "yarn install --prefix client",
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "client": "cd client  && yarn start",
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
   },
   "repository": {
     "type": "git",
@@ -17,6 +21,14 @@
   },
   "homepage": "https://github.com/computapars/weather-app#readme",
   "dependencies": {
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "concurrently": "^5.0.0",
+    "express": "^4.17.1"
+  },
+  "engines": {
+    "yarn": "1.19.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4"
   }
 }
